[package]
name = "tijme-calendar"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["calendar", "cli"]
description = "A simple calendar CLI written in Rust"
repository = "https://github.com/7ijme/calendar.git"
readme = "README.md"

[[bin]]
name = "cal"
path = "src/main.rs"

[dependencies]
chrono = "0.4.24"
colored = "2.0"
bpaf = { version = "0.7", features = ["derive", "bright-color"] }
